<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.0.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>org.ing.hackathon.totalrecall</groupId>
	<artifactId>total-recall-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>total-recall-parent</name>
	<description>Total Recall - Parent POM</description>

	<modules>
		<module>total-recall-api</module>
		<module>total-recall-docstore</module>
		<module>total-recall-docprocessor</module>
		<module>total-recall-common</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>

		<elasticsearch.version>6.1.3</elasticsearch.version>
		<itext.pdf.version>5.5.13</itext.pdf.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.ing.hackathon.totalrecall</groupId>
				<artifactId>total-recall-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ing.hackathon.totalrecall</groupId>
				<artifactId>total-recall-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.ing.hackathon.totalrecall</groupId>
				<artifactId>total-recall-docstore</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>org.elasticsearch</groupId>
				<artifactId>elasticsearch</artifactId>
				<version>${elasticsearch.version}</version>
			</dependency>

			<!-- Specific Elasticsearch 6 dependencies -->
			<dependency>
				<groupId>org.elasticsearch.client</groupId>
				<artifactId>elasticsearch-rest-high-level-client</artifactId>
				<version>6.1.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>


</project>
